# api/swagger.json
@@ -29,7 +29,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Server"
+                            "$ref": "#/definitions/models.ServerStatus"
                         }
                     }
                 }
@@ -50,12 +50,12 @@
                 "summary": "PowerHandler",
                 "parameters": [
                     {
-                        "description": "requared",
+                        "description": "format time is RFC3339",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Server"
+                            "$ref": "#/definitions/models.ServerStatus"
                         }
                     }
                 ],
@@ -79,7 +79,7 @@
                 }
             }
         },
-        "models.Server": {
+        "models.ServerStatus": {
             "type": "object",
             "properties": {
                 "mode": {
